Completed with concordian based unit and acceptance tests.